# buzz-server

./: CMakeLists.txt  Doxyfile  README
src/core/: CMakeLists.txt  acceptor.cc  acceptor.h  async_logging.cc  async_logging.h  async_logging_loop.cc  async_logging_loop.h  async_logging_singleton.cc  async_logging_singleton.h  base_loop.h  callbacks.h  channel.cc  channel.h  configure.cc  configure.h  connector.cc  connector.h  epoller.cc  epoller.h  event_control.cc  event_control.h  event_handler.h  event_loop.cc  event_loop.h  event_loop_thread_group.cc  event_loop_thread_group.h  event_pipe.h  inet_address.cc  inet_address.h  logging_level.h  loop_thread.cc  loop_thread.h  signal_set.cc  signal_set.h  signaller.h  tcp_client.cc  tcp_client.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  (+12 more)
src/core/base/: auto_mutex.h  bound_queue.cc  bound_queue.h  bound_queue_common.h  boundless_queue.cc  boundless_queue.h  byte_buffer_dynamic.cc  byte_buffer_dynamic.h  byte_buffer_static.h  common.cc  common.h  condition_variable.h  logging.cc  logging.h  mutex.h  noncopyable.h  scoped_mutex.h  thread.cc  thread.h  time_tick.h  types.h  variable_parameter.h
src/coresh/: CMakeLists.txt  application_service.cc  application_service.h  atomic_counter.h  blocking_queue.h  client_side.cc  client_side.h  communicator.cc  communicator.h  compressor.h  connect_ready_queue.cc  connect_ready_queue.h  connection.cc  connection.h  connection_pool.cc  connection_pool.h  encoder.h  lock_free_queue.cc  lock_free_queue.h  message_queue.cc  message_queue.h  network_service.cc  network_service.h  nonblocking_queue.h  packetizer.cc  packetizer.h  packetizer_table.cc  packetizer_table.h  protocol_format.h  reusable_buffers.cc  reusable_buffers.h  system_functions.cc  system_functions.h  variable_table.cc  variable_table.h
src/coresh/compress/: compress_null.cc  compress_null.h
src/coresh/encode/: encode_null.cc  encode_null.h
src/coresh/test/: CMakeLists.txt  communicator_test.cc  communicator_test.h  message_queue_test.cc  message_queue_test.h
src/database_server/server/: CMakeLists.txt  async_request_loop.cc  async_request_loop.h  async_request_pool.cc  async_request_pool.h  async_request_service.cc  async_request_service.h  async_request_thread.cc  async_request_thread.h  database_server.cc  database_server.h  database_terminal.cc  database_terminal.h  database_terminal_set.cc  database_terminal_set.h  main.cc  mysql_client.cc  mysql_client.h  mysql_reconnector.h  mysql_session.cc  mysql_session.h  mysql_session_group.h  storage_achieve_login.cc  storage_achieve_login.h  storage_achieve_save.cc  storage_achieve_save.h  storage_actor_login.cc  storage_actor_login.h  storage_actor_logout_center.cc  storage_actor_logout_center.h  storage_actor_online.cc  storage_actor_online.h  storage_actor_save.cc  storage_actor_save.h  storage_attr_actor_login.cc  storage_attr_actor_login.h  storage_attr_actor_save.cc  storage_attr_actor_save.h  storage_auction_actor_login.cc  storage_auction_actor_login.h  (+88 more)
src/database_server/test/: CMakeLists.txt  application_server.cc  application_server.h  main.cc
src/gateway_server/server/: CMakeLists.txt  check_session_queue.cc  check_session_queue.h  game_message_handler.cc  game_message_handler.h  gateway_server.cc  gateway_server.h  gateway_user.cc  gateway_user.h  gateway_user_pool.cc  gateway_user_pool.h  main.cc  session_channel.h  session_message_handler.cc  session_message_handler.h  status_check_session_handler.cc  status_check_session_handler.h  status_event.h  status_handler.h  status_login_handler.cc  status_login_handler.h  status_logout_handler.cc  status_logout_handler.h  status_running_handler.cc  status_running_handler.h  status_verify_question_handler.cc  status_verify_question_handler.h  storage_response_handler.cc  storage_response_handler.h
src/global/test/: CMakeLists.txt  direction_calculator_test.cc  simple_encrypt_test.cc
src/login_server_informal/server/: CMakeLists.txt  actor_login_handler.cc  actor_login_handler.h  check_actor_exist_handler.cc  check_actor_exist_handler.h  create_actor_handler.cc  create_actor_handler.h  http_context.h  http_request.h  http_response.cc  http_response.h  http_service_handler.cc  http_service_handler.h  login_server.cc  login_server.h  main.cc  message_thread_pool.cc  message_thread_pool.h  mysql_client.cc  mysql_client.h  mysql_reconnector.h  mysql_session.cc  mysql_session.h  server_configure.cc  server_configure.h
src/schedule_server/server/: CMakeLists.txt  main.cc  schedule_server.cc  schedule_server.h  schedule_terminal.cc  schedule_terminal.h
src/schedule_server/test/: CMakeLists.txt  application_server.cc  application_server.h  main.cc
src/session_server/server/: CMakeLists.txt  actor_message_handler.cc  actor_message_handler.h  brief_actor.cc  brief_actor.h  day_pass.cc  day_pass.h  error_code.h  extension_load_event_handler.cc  extension_load_event_handler.h  extension_manager.cc  extension_manager.h  extension_types.h  game_message_handler.cc  game_message_handler.h  game_server_index.cc  game_server_index.h  gateway_message_handler.cc  gateway_message_handler.h  global_time_tick.h  load_progress.h  main.cc  session_actor.cc  session_actor.h  session_actor_manager.cc  session_actor_manager.h  session_actor_pool.cc  session_actor_pool.h  session_server.cc  session_server.h  session_terminal.cc  session_terminal.h  storage_actor_login_response.cc  storage_actor_login_response.h  storage_response.cc  storage_response.h  sync_database_operation_manager.cc  sync_database_operation_manager.h  transaction_lock.cc  transaction_lock.h  (+2 more)
src/session_server/server/admin/: admin_message_handler.cc  admin_message_handler.h  admin_service.cc  admin_service.h  admin_session.cc  admin_session.h  admin_session_manager.cc  admin_session_manager.h  admin_session_pool.cc  admin_session_pool.h
src/session_server/server/event/: session_actor_event_constants.cpp  session_actor_event_constants.h  session_actor_event_types.cpp  (+21 more)
src/test/timing_wheel/: CMakeLists.txt  timing_wheel_test.cc  timing_wheel_test.h
(+3212 files in other folders)
